--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -21,6 +21,7 @@
 
     <!-- Height of the status bar.
     Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead. -->
-    <dimen name="status_bar_height">30dp</dimen>
+    <dimen name="status_bar_height_portrait">30dp</dimen>
+    <dimen name="status_bar_height_default">30dp</dimen>
 
 </resources>
