whyred: Adjust statusbar padding
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>
Change-Id: If972bc9c2f584b4966963cb027721f35aa3ad7a7

--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -22,4 +22,7 @@
 
     <!-- the padding on the top of the statusbar (usually 0) -->
     <dimen name="status_bar_padding_top">1px</dimen>
+
+    <dimen name="status_bar_padding_start">13dp</dimen>
+    <dimen name="status_bar_padding_end">3dp</dimen>
 </resources>
